# DevelopersToday-SCA-backend

./: .env.sample  .gitignore  Makefile  README.md  postgres  pyproject.toml  requirements.txt
src/apps/accounts/: urls.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/sca/: apps.py  urls.py
src/apps/sca/admin/: __init__.py  breeds.py  cats.py  missions.py  notes.py  targets.py
src/apps/sca/management/commands/: updatebreeds.py
src/apps/sca/migrations/: 0001_initial.py  0002_cat_image.py  0003_alter_cat_options_alter_cat_image_mission_target_and_more.py  0004_alter_mission_created_at_alter_note_created_at_and_more.py  0005_breed_alter_cat_experience_alter_cat_salary_and_more.py  0006_alter_cat_breed.py
src/apps/sca/models/: __init__.py  breeds.py  cats.py  missions.py  notes.py  targets.py
src/apps/sca/permissions/: __init__.py  missions.py  notes.py
src/apps/sca/serializers/: __init__.py  breeds.py  cats.py  missions.py  notes.py  targets.py
src/apps/sca/services/db/: __init__.py  breeds.py  cats.py  missions.py  notes.py  targets.py
src/apps/sca/views/: __init__.py  breeds.py  cats.py  missions.py  notes.py  targets.py
src/config/settings/: __init__.py  base.py  breeds.py  rest.py  unfold.py
src/config/web/: urls.py
src/utils/django/orm/: mixins.py
src/utils/django/serializers/: __init__.py
